hphp/hack/test/typecheck/test_consts6.php.exp
File "test_consts6.php", line 6, characters 15-24:
Cannot use static or parent::class in constant declaration (Parsing[1002])
